# MOVIN-SDK-Python

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
doc/: API.md
docs/: plan.md
examples/: bvh_to_robot.py  mocap_to_robot.py  mocap_to_robot_mujoco.py  mocap_to_robot_mujoco_stream.py  mocap_to_robot_mujoco_zmq_viewer.py  receive_mocap.py  zmq_pose_stream_visualizer.py
movin_sdk_python/: __init__.py
movin_sdk_python/mocap_receiver/: __init__.py  mocap_receiver.py  osc_reader.py
movin_sdk_python/retargeter/: __init__.py
movin_sdk_python/viewer/: __init__.py  mujoco_viewer.py
retargeter/: retargeter.py
utils/: __init__.py  bvh_loader.py  fk_utils.py  quat_utils.py
viewer/: mujoco_viewer.py
