[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "movin_sdk_python"
version = "1.0.0"
description = "Motion capture to robot retargeting SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "mujoco>=3.0.0",
    "mink>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.xml", "*.json", "*.STL"]
