[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movin_sdk_python"
version = "0.1.0"
description = "Motion capture to robot retargeting SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "mujoco>=3.0.0",
    "mink>=0.1.0",
]

[tool.setuptools]
packages = ["mocap_receiver", "retargeter", "utils", "viewer"]

[tool.setuptools.package-data]
"*" = ["*.xml", "*.json", "*.STL"]
